Subida pagina completa

--- a/html/menu.html
+++ b/html/menu.html
@@ -34,7 +34,7 @@
                             <a class="nav-link active color_white" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link active color_white" href="sucursal.html">Sucursales</a>
+                            <a class="nav-link active color_white" href="sucursal.html">    Sucursales</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown"
@@ -50,9 +50,21 @@
                                 <li><a class="dropdown-item" href="#descuento">Descuentos</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown" role="button"
+                              data-bs-toggle="dropdown" aria-expanded="false">
+                              Delivery
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                              <li><a class="dropdown-item" href="delivery.html">Pizza</a></li>
+                              <li><a class="dropdown-item" href="delivery.html">Empanadas</a></li>
+                              <li><a class="dropdown-item" href="delivery.html">Minutas</a></li>
+                              <li><a class="dropdown-item" href="delivery.html">Bebida</a></li>
+                            </ul>
+                          </li>
                         <li class="nav-item ">
                             <a class="nav-link active color_white" href="opinion.html">Opinion</a>
-                          </li>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -60,8 +72,8 @@
     </nav>
     <!--End Nav-->
     <main>
-        <h1 class="text-center my-3">Menu</h1>
-        <Section class="container-xxl bg-light p-4 my-2 " id="pizza">
+        <h1 class="text-center my-3 color_title">Menu</h1>
+        <Section class="set_menu container-xxl bg-light p-4 my-2 " id="pizza">
             <h2 class="text-center">Pizzas</h2>
             <div class="row w-100 mx-auto row_gap text-center">
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
@@ -72,56 +84,163 @@
                             <p class="card-text ">Clasica pizza de muzzarella y salsa</p>
                         </div>
                     </div>
-                </div>
+                </div><!-- End Card -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
                     <div class="card">
                         <img src="../img/Pizzas/pizza_jamon.jpg" class="card-img-top" alt="Pizza de Jamon y Queso">
                         <div class="card-body">
                             <h5>Pizza de Jamon y muzza</h5>
-                            <p class="card-text ">Clasica pizza de muzzarella y salsa</p>
+                            <p class="card-text ">Clasica pizza de muzzarella y jamon</p>
                         </div>
                     </div>
-                </div>
+                </div><!-- End Card -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
                     <div class="card">
                         <img src="../img/Pizzas/pizza_napo.jpg" class="card-img-top" alt="Pizza de napolitana">
                         <div class="card-body">
-                            <h5>Pizza de Jamon y muzza</h5>
-                            <p class="card-text ">Clasica pizza de muzzarella y salsa</p>
+                            <h5>Pizza de napolitana</h5>
+                            <p class="card-text ">Clasica pizza muzzarella,tomate,peregil y ajo</p>
                         </div>
                     </div>
-                </div>
+                </div><!-- End Card -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
                     <div class="card">
                         <img src="../img/Pizzas/pizza_fugazzeta.jpg" class="card-img-top" alt="Pizza de fugazzeta">
                         <div class="card-body">
-                            <h5>Pizza de Jamon y muzza</h5>
-                            <p class="card-text ">Clasica pizza de muzzarella y salsa</p>
+                            <h5>Pizza de fugazzeta</h5>
+                            <p class="card-text ">Clasica pizza muzzarella y cebolla</p>
                         </div>
                     </div>
-                </div>
+                </div><!-- End Card -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
                     <div class="card">
                         <img src="../img/Pizzas/pizza_peperoni.png" class="card-img-top" alt="Pizza de peperoni">
                         <div class="card-body">
-                            <h5>Pizza de Jamon y muzza</h5>
-                            <p class="card-text ">Clasica pizza de muzzarella y salsa</p>
+                            <h5>Pizza de peperoni</h5>
+                            <p class="card-text ">Clasica pizza muzzarella y peperoni</p>
                         </div>
                     </div>
-                </div>
+                </div><!-- End Card -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
                     <div class="card">
                         <img src="../img/Pizzas/pizza_especialidad_casa.jpg" class="card-img-top"
-                            alt="Pizza de peperoni">
+                            alt="Pizza de la casa">
                         <div class="card-body">
                             <h5>Pizza de especial de la casa</h5>
-                            <p class="card-text ">Clasica pizza de muzzarella y salsa</p>
+                            <p class="card-text ">Especial muzza,jamon,morron,huevo y queso</p>
+                        </div>
+                    </div>
+                </div><!-- End Card -->
+            </div>
+        </Section>
+        <!--End Section-->
+        <Section class="set_menu container-xxl bg-light p-4 my-2 " id="empanada">
+            <h2 class="text-center">Empanadas</h2>
+            <div class="row w-100 mx-auto row_gap text-center">
+                <div class="col-sm-6 col-md-4 col-lg-3 ">
+                    <div class="card">
+                        <img src="../img/Empanadas/empanadas_carne.jpg" alt="Empanadas de carne" class="card-img-top">
+
+                        <div class="card-body">
+                            <h5>Empanadas de carne</h5>
+                            <p class="card-text ">Clasicas Empanadas de carne molida,papa,etc</p>
+                        </div>
+                    </div>
+                </div><!-- End Card -->
+                <div class="col-sm-6 col-md-4 col-lg-3 ">
+                    <div class="card">
+                        <img src="../img/Empanadas/empanadas_pollo.jpg" alt="Empanadas de pollo" class="card-img-top">
+
+                        <div class="card-body">
+                            <h5>Empanadas de pollo</h5>
+                            <p class="card-text ">Clasicas empanadas de pollo desmenuzado</p>
+                        </div>
+                    </div>
+                </div><!-- End Card -->
+                <div class="col-sm-6 col-md-4 col-lg-3 ">
+                    <div class="card">
+                        <img src="../img/Empanadas/empanadas_jyq.jpg" alt="Empanadas de jamon y queso"
+                            class="card-img-top">
+
+                        <div class="card-body">
+                            <h5>Empanadas de jamon y queso</h5>
+                            <p class="card-text ">Clasicas empanadas de jamon y muzzarella</p>
+                        </div>
+                    </div>
+                </div><!-- End Card -->
+                <div class="col-sm-6 col-md-4 col-lg-3 ">
+                    <div class="card">
+                        <img src="../img/Empanadas/empanadas_humita.png" alt="Empanadas de choclo" class="card-img-top">
+
+                        <div class="card-body">
+                            <h5>Empanadas de humita</h5>
+                            <p class="card-text ">Clasicas empanadas de choclo</p>
+                        </div>
+                    </div>
+                </div><!-- End Card -->
+                <div class="col-sm-6 col-md-4 col-lg-3 ">
+                    <div class="card">
+                        <img src="../img/Empanadas/empanadas_salteñas.jpg" alt="Empanadas salteñas"
+                            class="card-img-top">
+
+                        <div class="card-body">
+                            <h5>Empanadas salteñas</h5>
+                            <p class="card-text ">Clasicas empanadas de carne cortada a cuchillo</p>
+                        </div>
+                    </div>
+                </div><!-- End Card -->
+            </div>
+        </section><!-- End Section -->
+        <Section class="set_menu container-xxl bg-light p-4 my-2 " id="empanada">
+            <h2 class="text-center">Minutas</h2>
+            <div class="row w-100 mx-auto row_gap text-center">
+                <div class="col-sm-6 col-md-4 col-lg-3 ">
+                    <div class="card">
+                        <img src="../img/Minutas/milanesa_fritas.jpg" alt="milanesa napolitana con fritas" class="card-img-top">
+                        <div class="card-body">
+                            <h5>milanesa napolitana con fritas</h5>
+                            <p class="card-text ">milanesa con jamon y muzza con guarnicion de papas fritas</p>
                         </div>
                     </div>
                 </div>
-            </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 ">
+                    <div class="card">
+                        <img src="../img/Minutas/milanes_pure.jpg" alt="milanesa con pure " class="card-img-top">
+                        <div class="card-body">
+                            <h5>milanesa napolitana con pure</h5>
+                            <p class="card-text ">milanesa al horno con guarnicion de pure</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 ">
+                    <div class="card">
+                        <img src="../img/Minutas/milanesa_ensalada.png" alt="milanesa con ensalada" class="card-img-top">
+                        <div class="card-body">
+                            <h5>milanesa con ensalada</h5>
+                            <p class="card-text ">milanesa al horno guarnicion de tomate y lechuga</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 ">
+                    <div class="card">
+                        <img src="../img/Minutas/sandwich_milanesaC.jpg" alt="Sandwich de milanesa completo" class="card-img-top">
+                        <div class="card-body">
+                            <h5>Sandwich de milanesa completo</h5>
+                            <p class="card-text ">Sandwich de milanesa con tomate,lechuga,jamon y queso , con guarnicion de fritas</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 ">
+                    <div class="card">
+                        <img src="../img/Minutas/hamburguesa_fritas.jpg" alt="hamburguesa completa" class="card-img-top">
+                        <div class="card-body">
+                            <h5>hamburguesa completa</h5>
+                            <p class="card-text ">hamburguesa con tomate,lechuga,cebolla morada,jamon y queso chedar, con guarnicion de fritas</p>
+                        </div>
+                    </div>
+                </div>
 
-        </Section>
+            </div>
     </main>
     <!--End Main-->
 
