--- a/html/sucursal.html
+++ b/html/sucursal.html
@@ -48,7 +48,18 @@
                 <li><a class="dropdown-item" href="menu.html#bebida">Bebidas</a></li>
                 <li><a class="dropdown-item" href="menu.html#descuento">Descuentos</a></li>
               </ul>
-
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Delivery
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                <li><a class="dropdown-item" href="delivery.html">Pizza</a></li>
+                <li><a class="dropdown-item" href="delivery.html">Empanadas</a></li>
+                <li><a class="dropdown-item" href="delivery.html">Minutas</a></li>
+                <li><a class="dropdown-item" href="delivery.html">Bebida</a></li>
+              </ul>
             </li>
             <li class="nav-item ">
               <a class="nav-link active color_white" href="opinion.html">Opinion</a>
@@ -61,7 +72,7 @@
   <!--End Nav-->
 
   <main>
-    <h1 class="text-center my-1">Sucursales</h1>
+    <h1 class="text-center my-1 color_title">Sucursales</h1>
 
     <section class="container bg-grey p-4 my-3 ">
       <h2 class="text-center">Av.Callao</h2>
