--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
                 <li><a class="dropdown-item" href="html/menu.html#descuento">Descuentos</a></li>
               </ul>
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Delivery
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                <li><a class="dropdown-item" href="html/delivery.html">Pizza</a></li>
+                <li><a class="dropdown-item" href="html/delivery.html">Empanadas</a></li>
+                <li><a class="dropdown-item" href="html/delivery.html">Minutas</a></li>
+                <li><a class="dropdown-item" href="html/delivery.html">Bebida</a></li>
+              </ul>
+            </li>
             <li class="nav-item ">
               <a class="nav-link active color_white" href="html/opinion.html">Opinion</a>
             </li>
@@ -93,7 +105,7 @@
   <!--End header-->
   <main>
     <section class="container-fluid  my-3  mx-auto rounded-3 novedades">
-      <h1 class="text-center">Promociones</h1>
+      <h1 class="text-center color_title">Promociones</h1>
       <div class="row w-100 mx-auto row_gap text-center">
         <div class="col-sm-6 col-md-4 col-lg-3 ">
           <div class="card ">
