--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
               <a class="nav-link active color_white" href="html/sucursal.html">Sucursales</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown" role="button"
+              <a class="nav-link dropdown-toggle color_white" href="#"  role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Menu
               </a>
-              <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+              <ul class="dropdown-menu" >
                 <li><a class="dropdown-item" href="html/menu.html#pizza">Pizza</a></li>
                 <li><a class="dropdown-item" href="html/menu.html#empanada">Empanadas</a></li>
                 <li><a class="dropdown-item" href="html/menu.html#minuta">Minutas</a></li>
@@ -51,11 +51,11 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown" role="button"
+              <a class="nav-link dropdown-toggle color_white" href="#" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Delivery
               </a>
-              <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+              <ul class="dropdown-menu" >
                 <li><a class="dropdown-item" href="html/delivery.html">Pizza</a></li>
                 <li><a class="dropdown-item" href="html/delivery.html">Empanadas</a></li>
                 <li><a class="dropdown-item" href="html/delivery.html">Minutas</a></li>
