--- a/html/delivery.html
+++ b/html/delivery.html
@@ -37,8 +37,8 @@
                             <a class="nav-link active color_white" href="sucursal.html">Sucursales</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle color_white" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Menu
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
@@ -51,8 +51,8 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle color_white" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Delivery
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
@@ -149,7 +149,7 @@
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" >Pizza de muzzarella</h5>
+                                            <h5 class="modal-title">Pizza de muzzarella</h5>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                 aria-label="Close"></button>
                                         </div>
@@ -203,7 +203,7 @@
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" >Pizza de muzzarella</h5>
+                                            <h5 class="modal-title">Pizza de muzzarella</h5>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                 aria-label="Close"></button>
                                         </div>
@@ -252,12 +252,12 @@
                                 Comprar
                             </button>
                             <!-- Modal -->
-                            <div class="modal fade" id="pizza_fugazzeta" tabindex="-1" aria-labelledby="exampleModalLabel"
-                                aria-hidden="true">
+                            <div class="modal fade" id="pizza_fugazzeta" tabindex="-1"
+                                aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" >Pizza de muzzarella</h5>
+                                            <h5 class="modal-title">Pizza de muzzarella</h5>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                 aria-label="Close"></button>
                                         </div>
@@ -307,8 +307,8 @@
                                 Comprar
                             </button>
                             <!-- Modal -->
-                            <div class="modal fade" id="pizza_peperoni" tabindex="-1" aria-labelledby="exampleModalLabel"
-                                aria-hidden="true">
+                            <div class="modal fade" id="pizza_peperoni" tabindex="-1"
+                                aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
