--- a/html/sucursal.html
+++ b/html/sucursal.html
@@ -36,11 +36,11 @@
               <a class="nav-link active color_white" href="sucursal.html">Sucursales</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown" role="button"
+              <a class="nav-link dropdown-toggle color_white" href="#" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Menu
               </a>
-              <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+              <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="menu.html#pizza">Pizza</a></li>
                 <li><a class="dropdown-item" href="menu.html#empanada">Empanadas</a></li>
                 <li><a class="dropdown-item" href="menu.html#minuta">Minutas</a></li>
@@ -50,11 +50,11 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown" role="button"
+              <a class="nav-link dropdown-toggle color_white" href="#"  role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Delivery
               </a>
-              <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+              <ul class="dropdown-menu" ">
                 <li><a class="dropdown-item" href="delivery.html">Pizza</a></li>
                 <li><a class="dropdown-item" href="delivery.html">Empanadas</a></li>
                 <li><a class="dropdown-item" href="delivery.html">Minutas</a></li>
